Check Point 3: Fix Expand And Collapse

--- a/HTML/SCSS/body.scss
+++ b/HTML/SCSS/body.scss
@@ -402,10 +402,10 @@
                 
                 p
                 {
-                    background-color: red;
+                    //background-color: red;
                     margin: 0vh 0vh 0vh 0vh;
 
-                    border: 1px solid black;
+                    border: none;
                 }
             }
 
